fixed tweet img alignment

--- a/frontend/styles/homepage.css
+++ b/frontend/styles/homepage.css
@@ -278,7 +278,6 @@ input:focus{
 .tweet__withimg{
     display: flex;
     flex-direction: column;
-    align-items: center;
     border-bottom: solid 1px;
 }
 .tweet-img{
@@ -286,6 +285,7 @@ input:focus{
     height:60%;
     padding-top: 0;
     padding-bottom: 0;
+    align-self: center;
 }
 .tweet-img img{
     height:100%;
